# velocitron-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
grammar/: VelocitronPetriNet.g4
implementations/python/: LICENSE  README.md  pyproject.toml  pyrightconfig.json
implementations/python/benchmarks/: engine_hot_path.py
implementations/python/src/velocitron/: __init__.py  cel.py  composition.py  contract.py  durable_sqlite.py  engine.py  explain.py  journal.py  lint.py  parser.py  properties.py  registry.py  runtime.py  schema.py  schema_resources.py  skill  viz.py
implementations/python/src/velocitron/dsl/: __init__.py  api.py  check.py  cli.py  compiler.py  diagnostics.py
implementations/python/src/velocitron/schemas/: __init__.py  composition.schema.json  net.schema.json
implementations/python/tests/: _cel_adapters.py  test_batch_gate_integration.py  test_batch_gate_parser_resolver.py  test_cadence_tick_integration.py  test_cadence_tick_parser_resolver.py  test_cel_adapter.py  test_cel_eval.py  test_clock_seam.py  test_coin_choice_integration.py  test_coin_choice_parser_resolver.py  test_coin_deposit_integration.py  test_coin_deposit_parser_acceptance.py  test_composition.py  test_composition_firing.py  test_composition_merge.py  test_contrived_examples.py  test_cookie_vending_integration.py  test_cookie_vending_parser_resolver.py  test_correlated_inhibit.py  test_crossing_window_integration.py  test_crossing_window_parser_resolver.py  test_dependencies.py  test_dsl_api.py  test_dsl_canonical_json.py  test_dsl_chain_expansion.py  test_dsl_check_cli.py  test_dsl_explain_cli.py  test_dsl_generated_smoke.py  test_dsl_multisource_api.py  test_dsl_place_accepts.py  test_dsl_produce_cel.py  test_dsl_skill_cli.py  test_durable_sqlite.py  test_enablement.py  test_engine_benchmark.py  test_engine_topology.py  test_explain.py  test_failure_budget.py  test_firing.py  test_firing_engine.py  (+34 more)
implementations/python/tests/fixtures/readarc/: elevator-dispatch.readarc.json  greenhouse-sprinkler.readarc.json  library-hold.readarc.json  turnstile-gate.readarc.json
spec/: composition.md  firing-semantics.md  handler-contract.md  (+4 more)
(+321 files in other folders)
